gccida/c0/cselib_subst_to_values
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_subst_to_values/src/cselib.c:1286:45: error: use of undeclared identifier 'machine_mode'
e = new_cselib_val( ++next_unknown_value, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_subst_to_values/src/cselib.c:1286:60: error: expected expression
e = new_cselib_val( ++next_unknown_value, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_subst_to_values/src/cselib.c:1295:51: error: use of undeclared identifier 'machine_mode'
val_rtx = new_cselib_val( ++next_unknown_value, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x))->u.val_rtx; 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_subst_to_values/src/cselib.c:1295:66: error: expected expression
val_rtx = new_cselib_val( ++next_unknown_value, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x))->u.val_rtx; 
                                                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_subst_to_values/src/obj/cselib.o] Error 1
